--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Radley:wght@400;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400&family=JetBrains+Mono:wght@300;400;500&display=swap');
 
 :root {
   --background: 0 0% 100%;
@@ -38,7 +37,7 @@
   }
   
   h1, h2, h3, h4, h5, h6 {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Radley', serif;
     font-weight: 400;
   }
   
@@ -71,4 +70,10 @@
   .held-button-ghost {
     @apply held-button hover:bg-gray-100 hover:text-gray-900;
   }
+}
+
+
+.blur{
+  filter: blur(4px);
+  transition: filter 0.2s ease-in-out;
 }
