--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -247,3 +247,10 @@ nav .held-container{
   border-radius: 1rem 1rem 0 0;
   border: none;
 }
+
+.settingsAvatar{
+  max-height: 100px;
+  max-width: 100px;
+  height: 100px;
+  width: 100px;
+}
