--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -254,6 +254,12 @@ nav .held-container{
   height: 100px;
   width: 100px;
 }
+.avatarCollaborative{
+  max-height: 40px;
+  max-width: 40px;
+  height: 40px;
+  width: 40px;
+}
 
 .space-evenly{
   justify-content: space-evenly;
