--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -272,3 +272,11 @@ nav .held-container{
   border-radius: 20px 20px 0 0;
   box-shadow: 0 -1px 3px rgba(212, 212, 212, 0.1);
 }
+
+.held-second{
+  background-color: #ccc;;
+}
+
+.border-none {
+  border: none;
+}
