--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -624,6 +624,10 @@ body.capacitor-ios input::-webkit-textfield-decoration-container {
 }
 
 
+.dark .dark-invert-hero{
+  filter: invert(1) !important;
+}
+
 
 /*dark:text-gray-100*/
 
