--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -640,3 +640,7 @@ body.capacitor-ios input::-webkit-textfield-decoration-container {
     --tw-bg-opacity: 1;
     background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1))!important;
 }
+
+.top-4rem{
+  top: 4rem;
+}
