--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -652,3 +652,10 @@ body.capacitor-ios input::-webkit-textfield-decoration-container {
 .top-4rem{
   top: 4rem;
 }
+
+
+@media screen and (max-width: 768px) {
+.signin{
+      min-height: calc(100vh - 170px);
+}
+}
