--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,6 +107,7 @@ h1, h2, h3, h4, h5, h6, .font-serif, [class*="font-serif"] {
   --input: 0 0% 89.8%;
   --ring: 0 0% 3.9%;
   --radius: 0.5rem;
+  --safe-area-top: 0px;
 }
 
 .dark {
