--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -675,11 +675,16 @@ body.capacitor-ios input::-webkit-textfield-decoration-container {
 }
 
 
+.signin{
+      min-height: calc(100vh - 150px);
+}
+
 @media screen and (max-width: 768px) {
 .signin{
-      min-height: calc(100vh - 170px);
+      min-height: calc(100vh - 270px);
 }
 }
+
 
 
 .status-bar-overlay {
@@ -717,6 +722,7 @@ body.capacitor-ios input::-webkit-textfield-decoration-container {
 .transparent{
   background-color: transparent;
   background: transparent;
+  
 }
 
   /* Dynamic Island sticky navigation with extended blur */
