--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,10 +69,11 @@
 @tailwind utilities;
 
 /* Set Metropolis as default sans-serif font with letter-spacing */
-body, * {
+body, *, .font-sans{
   font-family: 'metropolis', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif !important;
   letter-spacing: -0.02rem;
 }
+
 
 /* Override any Next.js font classes */
 [class*="__Inter"] {
@@ -826,9 +827,21 @@ body {
 
 
 .h-95vh {
-  height: 95vh;;
+  height: 95vh;; 
 }
 
 .rotation-height {
   min-height: 40vh;
 }
+
+.rotation-tab {
+  top: calc(100% - .75em);
+  box-shadow: 0 2px 92px rgba(0, 0, 0, .4);
+}
+
+
+.space-between{
+  justify-content: space-between;
+}
+
+
