--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -849,7 +849,10 @@ body {
 
 .FAB{
   right: calc(1rem - 10px);
-  bottom: calc(5rem - 10px);;
+  bottom: calc(5rem - 20px);;
+}
+.FAB button{
+  box-shadow: inset 0 1px 3px rgb(255 255 255 / 23%), 0 3px 4px rgb(0 0 0 / 35%);
 }
 
 /* Modern iOS-style Slider */
